syntax = "proto3";
package mail;

message Item {
  uint32 modseq = 1;
  uint32 id = 2;

}

message Msg {
  string snippet = 1;
  int64 internal_date=2;
}

message MsgHeader {
  string name = 1;
  string value = 2;
}

message MsgPart {
  repeated MsgHeader headers = 1;
  string part_id = 2;
  string mime_type = 3;
  repeated MsgPart parts = 4;
}